--- a/etc/supervisord.conf.d/suricata.ini
+++ b/etc/supervisord.conf.d/suricata.ini
@@ -1,5 +1,6 @@
 [program:suricata]
-command=/usr/sbin/suricata %(ENV_SURICATA_ARGS)s
+command=/usr/sbin/suricata-wrapper %(ENV_SURICATA_ARGS)s
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 redirect_stderr=true
+autorestart=false
