--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
-      - run: basename "${GITHUB_REF}" > tag
       - run: echo ${{ secrets.DOCKER_TOKEN }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
-      - run: TAG=$(cat tag) && make
-      - run: TAG=$(cat tag) && make push
+      - run: basename "${GITHUB_REF}" > tag
+      - run: TAG=$(cat tag) make
+      - run: TAG=$(cat tag) make push
