--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,5 +11,13 @@ jobs:
       - uses: actions/checkout@v1
       - run: echo ${{ secrets.DOCKER_TOKEN }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
       - run: basename "${GITHUB_REF}" > tag
-      - run: TAG=$(cat tag) make
-      - run: TAG=$(cat tag) make push
+      - name: Build image
+        run: |
+          for try in 1 2 3; do
+              if make TAG=$(cat tag); then
+                  exit 0
+              fi
+          done
+          exit 1
+      - name: Push image
+        run: make push TAG=$(cat tag)
