--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,20 +6,69 @@ on:
       - "README.md"
 
 jobs:
-  build:
-    name: "Build and push Docker image"
-    runs-on: ubuntu-latest
+  x86_64:
+    runs-on: ubuntu-18.04
+    env:
+      ARCH: x86_64
     steps:
-      - uses: actions/checkout@v1
-      - run: echo ${{ secrets.DOCKER_TOKEN }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
-      - run: basename "${GITHUB_REF}" > tag
-      - name: Build image
-        run: |
-          for try in 1 2 3; do
-              if make TAG=$(cat tag); then
-                  exit 0
-              fi
-          done
-          exit 1
-      - name: Push image
-        run: make push TAG=$(cat tag)
+    - uses: actions/checkout@v2
+
+    - run: echo "::set-env name=VERSION::$(cat VERSION)"
+    - run: echo "::set-env name=BUILDER_TAG::docker.pkg.github.com/jasonish/docker-suricata/builder-${ARCH}:${VERSION}"
+    - run: echo "::set-env name=RUNNER_TAG::docker.pkg.github.com/jasonish/docker-suricata/runner-${ARCH}:${VERSION}"
+
+    - run: "echo BUILDER_TAG: ${BUILDER_TAG}"
+    - run: "echo RUNNER_TAG: ${RUNNER_TAG}"
+
+    - run: echo ${{ secrets.DOCKER_TOKEN }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
+    - run: echo ${{ secrets.GITHUB_TOKEN }} | docker login -u jasonish --password-stdin docker.pkg.github.com
+
+    - run: docker pull ${BUILDER_TAG} || true
+    - run: docker pull ${RUNNER_TAG} || true
+
+    - run: bash -x ./deploy.sh ${ARCH}
+
+    - run: docker tag jasonish/suricata:${VERSION}-${ARCH} ${RUNNER_TAG}
+    - run: docker push ${BUILDER_TAG}
+    - run: docker push ${RUNNER_TAG}
+
+  armv7:
+    runs-on: ubuntu-18.04
+    env:
+      ARCH: armv7
+    steps:
+    - uses: actions/checkout@v2
+
+    - run: echo "::set-env name=VERSION::$(cat VERSION)"
+    - run: echo "::set-env name=BUILDER_TAG::docker.pkg.github.com/jasonish/docker-suricata/builder-${ARCH}:${VERSION}"
+    - run: echo "::set-env name=RUNNER_TAG::docker.pkg.github.com/jasonish/docker-suricata/runner-${ARCH}:${VERSION}"
+
+    - run: echo ${{ secrets.DOCKER_TOKEN }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
+    - run: echo ${{ secrets.GITHUB_TOKEN }} | docker login -u jasonish --password-stdin docker.pkg.github.com
+
+    - uses: crazy-max/ghaction-docker-buildx@v1      
+      with:        
+        version: latest    
+
+    - run: docker pull ${BUILDER_TAG} || true
+    - run: docker pull ${RUNNER_TAG} || true
+
+    - run: bash -x ./deploy.sh ${ARCH}
+
+    - run: docker tag jasonish/suricata:${VERSION}-${ARCH} ${RUNNER_TAG}
+    - run: docker push ${BUILDER_TAG}
+    - run: docker push ${RUNNER_TAG}
+
+  deploy:
+    runs-on: ubuntu-18.04
+    needs: [x86_64, armv7]
+    steps:
+    - uses: actions/checkout@v2
+    - uses: crazy-max/ghaction-docker-buildx@v3
+      with:
+        version: latest
+    - run: |
+        mkdir -p ~/.docker
+        echo '{"experimental": "enabled"}' > ~/.docker/config.json
+    - run: echo ${{ secrets.DOCKER_TOKEN }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
+    - run: ./deploy.sh manifest
