--- a/Dockerfile.x86_64
+++ b/Dockerfile.x86_64
@@ -1,4 +1,4 @@
-FROM fedora:31
+FROM fedora:31 AS builder
 
 RUN dnf -y update
 
@@ -53,6 +53,7 @@ RUN git clone https://github.com/OISF/suricata.git && \
               tar zxf - --strip-components=1
 
 WORKDIR /src/suricata
+
 RUN ./autogen.sh
 RUN ./configure \
         --prefix=/usr \
@@ -60,13 +61,17 @@ RUN ./configure \
         --disable-gccmarch-native \
         --enable-lua
 
-ARG CORES=1
+ARG CORES=2
 
 RUN make -j "${CORES}"
 
 RUN make install install-conf DESTDIR=/fakeroot
 
-FROM fedora:31
+# Something about the Docker mounts won't let us copy /var/run in the
+# next stage.
+RUN rm -rf /fakeroot/var
+
+FROM fedora:31 AS runner
 
 RUN dnf -y update && dnf -y install \
         file \
@@ -93,15 +98,17 @@ RUN dnf -y update && dnf -y install \
         pcre \
         procps-ng \
         python3-yaml \
-        sudo \
         tcpdump \
         which \
         zlib \
         && dnf clean all
 
-COPY --from=0 /fakeroot /
+COPY --from=builder /fakeroot /
+
+# Create the directories that didn't get coped from the previous stage.
+RUN mkdir -p /var/log/suricata /var/run/suricata
+
 COPY /update.yaml /etc/suricata/update.yaml
-COPY /docker-entrypoint.sh /
 COPY /suricata.logrotate /etc/logrotate.d/suricata
 
 RUN suricata-update update-sources && \
@@ -114,7 +121,6 @@ RUN useradd --system --create-home suricata && \
         chown -R suricata:suricata /var/log/suricata && \
         chown -R suricata:suricata /var/lib/suricata && \
         chown -R suricata:suricata /var/run/suricata && \
-        echo "suricata ALL=(ALL) NOPASSWD: ALL" > /etc/sudoers.d/suricata && \
         cp -a /etc/suricata /etc/suricata.dist && \
         chmod 600 /etc/logrotate.d/suricata
 
@@ -122,4 +128,5 @@ VOLUME /var/log/suricata
 VOLUME /var/lib/suricata
 VOLUME /etc/suricata
 
+COPY /docker-entrypoint.sh /
 ENTRYPOINT ["/docker-entrypoint.sh"]
