--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,81 +4,15 @@ on:
   push:
     paths-ignore:
       - "README.md"
+  pull_request:
 
 jobs:
-  x86_64:
+  build:
     runs-on: ubuntu-18.04
-    env:
-      ARCH: x86_64
     steps:
-    - uses: actions/checkout@v2
-
-    - run: echo "::set-env name=VERSION::master"
-    - run: echo "::set-env name=BUILDER_TAG::docker.pkg.github.com/${GITHUB_ACTOR}/docker-suricata/builder-${ARCH}:${VERSION}"
-    - run: echo "::set-env name=RUNNER_TAG::docker.pkg.github.com/${GITHUB_ACTOR}/docker-suricata/runner-${ARCH}:${VERSION}"
-
-    - run: "echo BUILDER_TAG: ${BUILDER_TAG}"
-    - run: "echo RUNNER_TAG: ${RUNNER_TAG}"
-
-    - run: echo ${{ secrets.DOCKER_TOKEN }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
-    - run: echo ${{ secrets.GITHUB_TOKEN }} | docker login -u ${GITHUB_ACTOR} --password-stdin docker.pkg.github.com
-
-    - run: docker pull ${BUILDER_TAG} || true
-    - run: docker pull ${RUNNER_TAG} || true
-
-    - run: bash -x ./build.sh ${ARCH}
-
-    - run: docker tag jasonish/suricata:${VERSION}-${ARCH} ${RUNNER_TAG}
-    - run: docker push ${BUILDER_TAG}
-    - run: docker push ${RUNNER_TAG}
-
-  armv6:
-    runs-on: ubuntu-18.04
-    env:
-      ARCH: armv6
-    steps:
-    - uses: actions/checkout@v2
-
-    - run: echo "::set-env name=VERSION::master"
-    - run: echo "::set-env name=BUILDER_TAG::docker.pkg.github.com/${GITHUB_ACTOR}/docker-suricata/builder-${ARCH}:${VERSION}"
-    - run: echo "::set-env name=RUNNER_TAG::docker.pkg.github.com/${GITHUB_ACTOR}/docker-suricata/runner-${ARCH}:${VERSION}"
-
-    - run: echo ${{ secrets.GITHUB_TOKEN }} | docker login -u ${GITHUB_ACTOR} --password-stdin docker.pkg.github.com
-    - run: echo ${{ secrets.DOCKER_TOKEN }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
-
-    # This enables the ability to execute Arm binaries for us.
-    - uses: crazy-max/ghaction-docker-buildx@v3
-      with:
-        version: latest
-
-    - run: docker pull ${BUILDER_TAG} || true
-    - run: docker pull ${RUNNER_TAG} || true
-
-    - run: bash -x ./build.sh ${ARCH}
-
-    - run: docker tag jasonish/suricata:${VERSION}-${ARCH} ${RUNNER_TAG}
-    - run: docker push ${BUILDER_TAG}
-    - run: docker push ${RUNNER_TAG}
-
-  deploy:
-    runs-on: ubuntu-18.04
-    needs: [x86_64, armv6]
-    steps:
-    - uses: actions/checkout@v2
-    - uses: crazy-max/ghaction-docker-buildx@v3
-      with:
-        version: latest
-    - run: echo "::set-env name=VERSION::master"
-    - run: |
-        mkdir -p ~/.docker
-        echo '{"experimental": "enabled"}' > ~/.docker/config.json
-    - run: echo ${{ secrets.GITHUB_TOKEN }} | docker login -u ${GITHUB_ACTOR} --password-stdin docker.pkg.github.com
-    - run: echo ${{ secrets.DOCKER_TOKEN }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
-
-    - run: docker pull docker.pkg.github.com/${GITHUB_ACTOR}/docker-suricata/runner-x86_64:${VERSION}
-    - run: docker pull docker.pkg.github.com/${GITHUB_ACTOR}/docker-suricata/runner-armv6:${VERSION}
-
-    - run: docker tag docker.pkg.github.com/${GITHUB_ACTOR}/docker-suricata/runner-x86_64:${VERSION} jasonish/suricata:${VERSION}-x86_64
-    - run: docker tag docker.pkg.github.com/${GITHUB_ACTOR}/docker-suricata/runner-armv6:${VERSION} jasonish/suricata:${VERSION}-armv6
-
-    - run: ./build.sh push
+      - uses: actions/checkout@v2
+      # This enables the ability to execute Arm binaries for us.
+      - uses: crazy-max/ghaction-docker-buildx@v3
+        with:
+          version: latest
+      - run: ./build.sh
