--- a/Dockerfile.centos-amd64
+++ b/Dockerfile.centos-amd64
@@ -1,6 +1,8 @@
-FROM fedora:31 AS builder
+FROM centos:8 AS builder
 
-RUN dnf -y update
+RUN \
+        dnf -y install epel-release dnf-plugins-core && \
+        dnf config-manager --set-enabled PowerTools
 
 RUN dnf -y install \
         autoconf \
@@ -64,9 +66,11 @@ RUN make install install-conf DESTDIR=/fakeroot
 # next stage.
 RUN rm -rf /fakeroot/var
 
-FROM fedora:31 AS runner
-
-RUN dnf -y update && dnf -y install \
+FROM centos:8 AS runner
+RUN \
+        dnf -y update && \
+        dnf -y install epel-release && \
+        dnf -y install \
         file \
         findutils \
         hiredis \
@@ -90,16 +94,17 @@ RUN dnf -y update && dnf -y install \
         nss-softokn \
         pcre \
         procps-ng \
+        python3 \
         python3-yaml \
         tcpdump \
         which \
-        zlib \
-        && dnf clean all
+        zlib && \
+        dnf clean all
 
 COPY --from=builder /fakeroot /
 
 # Create the directories that didn't get coped from the previous stage.
-RUN mkdir -p /var/log/suricata /var/run/suricata
+RUN mkdir -p /var/log/suricata /var/run/suricata /var/lib/suricata
 
 COPY /update.yaml /etc/suricata/update.yaml
 COPY /suricata.logrotate /etc/logrotate.d/suricata
@@ -123,6 +128,3 @@ VOLUME /etc/suricata
 
 COPY /docker-entrypoint.sh /
 ENTRYPOINT ["/docker-entrypoint.sh"]
-
-ARG BUILD_DATE
-RUN echo "${BUILD_DATE}" > /etc/build_date
