--- a/Dockerfile.centos-amd64
+++ b/Dockerfile.centos-amd64
@@ -1,6 +1,8 @@
-FROM fedora:31
+FROM centos:8 AS builder
 
-RUN dnf -y update
+RUN \
+        dnf -y install epel-release dnf-plugins-core && \
+        dnf config-manager --set-enabled PowerTools
 
 RUN dnf -y install \
         autoconf \
@@ -42,7 +44,7 @@ RUN dnf -y install \
 
 WORKDIR /src
 
-ENV VERSION 4.1.8
+ARG VERSION=4.1.8
 RUN curl -OL https://www.openinfosecfoundation.org/download/suricata-${VERSION}.tar.gz
 RUN tar zxf suricata-${VERSION}.tar.gz
 
@@ -54,15 +56,21 @@ RUN ./configure \
         --disable-gccmarch-native \
         --enable-lua
 
-ARG CORES=1
+ARG CORES=2
 
 RUN make -j "${CORES}"
 
 RUN make install install-conf DESTDIR=/fakeroot
 
-FROM fedora:31
+# Something about the Docker mounts won't let us copy /var/run in the
+# next stage.
+RUN rm -rf /fakeroot/var
 
-RUN dnf -y update && dnf -y install \
+FROM centos:8 AS runner
+RUN \
+        dnf -y update && \
+        dnf -y install epel-release && \
+        dnf -y install \
         file \
         findutils \
         hiredis \
@@ -86,16 +94,19 @@ RUN dnf -y update && dnf -y install \
         nss-softokn \
         pcre \
         procps-ng \
+        python3 \
         python3-yaml \
-        sudo \
         tcpdump \
         which \
-        zlib \
-        && dnf clean all
+        zlib && \
+        dnf clean all
 
-COPY --from=0 /fakeroot /
+COPY --from=builder /fakeroot /
+
+# Create the directories that didn't get coped from the previous stage.
+RUN mkdir -p /var/log/suricata /var/run/suricata /var/lib/suricata
+
 COPY /update.yaml /etc/suricata/update.yaml
-COPY /docker-entrypoint.sh /
 COPY /suricata.logrotate /etc/logrotate.d/suricata
 
 RUN suricata-update update-sources && \
@@ -108,7 +119,6 @@ RUN useradd --system --create-home suricata && \
         chown -R suricata:suricata /var/log/suricata && \
         chown -R suricata:suricata /var/lib/suricata && \
         chown -R suricata:suricata /var/run/suricata && \
-        echo "suricata ALL=(ALL) NOPASSWD: ALL" > /etc/sudoers.d/suricata && \
         cp -a /etc/suricata /etc/suricata.dist && \
         chmod 600 /etc/logrotate.d/suricata
 
@@ -116,4 +126,5 @@ VOLUME /var/log/suricata
 VOLUME /var/lib/suricata
 VOLUME /etc/suricata
 
+COPY /docker-entrypoint.sh /
 ENTRYPOINT ["/docker-entrypoint.sh"]
