--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,22 +4,15 @@ on:
   push:
     paths-ignore:
       - "README.md"
+  pull_request:
 
 jobs:
   build:
-    name: "Build and push Docker image"
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-18.04
     steps:
-      - uses: actions/checkout@v1
-      - run: echo ${{ secrets.DOCKER_TOKEN }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
-      - run: basename "${GITHUB_REF}" > tag
-      - name: Build image
-        run: |
-          for try in 1 2 3; do
-              if make TAG=$(cat tag); then
-                  exit 0
-              fi
-          done
-          exit 1
-      - name: Push image
-        run: make push TAG=$(cat tag)
+      - uses: actions/checkout@v2
+      # This enables the ability to execute Arm binaries for us.
+      - uses: crazy-max/ghaction-docker-buildx@v3
+        with:
+          version: latest
+      - run: ./build.sh
