--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,7 +15,7 @@ jobs:
       - uses: crazy-max/ghaction-docker-buildx@v3
         with:
           version: latest
-      - run: ./build.sh
+      - run: ../build.sh
         working-directory: master
   build-6-0:
     runs-on: ubuntu-18.04
@@ -25,7 +25,7 @@ jobs:
       - uses: crazy-max/ghaction-docker-buildx@v3
         with:
           version: latest
-      - run: ./build.sh
+      - run: ../build.sh
         working-directory: "6.0"
   build-5-0:
     runs-on: ubuntu-18.04
@@ -35,7 +35,7 @@ jobs:
       - uses: crazy-max/ghaction-docker-buildx@v3
         with:
           version: latest
-      - run: ./build.sh
+      - run: ../build.sh
         working-directory: "5.0"
   build-4-1:
     runs-on: ubuntu-18.04
@@ -45,5 +45,5 @@ jobs:
       - uses: crazy-max/ghaction-docker-buildx@v3
         with:
           version: latest
-      - run: ./build.sh
+      - run: ../build.sh
         working-directory: "4.1"
