--- a/5.0/Dockerfile.centos-amd64
+++ b/5.0/Dockerfile.centos-amd64
@@ -1,6 +1,7 @@
 FROM centos:8 AS builder
 
 RUN \
+        dnf -y update && \
         dnf -y install epel-release dnf-plugins-core && \
         dnf config-manager --set-enabled powertools
 
