--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -1,30 +1,11 @@
-name: build
+name: nightly
 
 on:
-  push:
-    paths-ignore:
-      - "README.md"
-  pull_request:
+  schedule:
+    # 3:33am wherever this is run...
+    - cron: "7 21 * * *"
 
 jobs:
-
-  # Build versioned releases. We don't push these one every build.
-  build-versions:
-    runs-on: ubuntu-20.04
-    strategy:
-      matrix:
-        arch: [amd64, arm32v6, arm64v8]
-        version: ["6.0", "5.0"]
-      fail-fast: false
-    steps:
-      - uses: actions/checkout@v2
-      - uses: docker/setup-qemu-action@v1
-      - uses: docker/setup-buildx-action@v1
-      - run: bash -x ../build.sh ${{ matrix.arch }}
-        working-directory: ${{ matrix.version }}
-
-  # Build for master. We push these on every release to make sure they
-  # are up to date.
   build-master:
     runs-on: ubuntu-20.04
     strategy:
