alpine builds: add bash
Just to have a little more in common with the x86_64 builds.

--- a/5.0/Dockerfile.arm64v8
+++ b/5.0/Dockerfile.arm64v8
@@ -70,6 +70,7 @@ RUN rm -rf /fakeroot/var
 FROM arm64v8/alpine:latest AS runner
 
 RUN apk add \
+        bash \
         hiredis \
         jansson \
         libcap \
