--- a/5.0/Dockerfile.arm32v6
+++ b/5.0/Dockerfile.arm32v6
@@ -70,6 +70,7 @@ RUN rm -rf /fakeroot/var
 FROM arm32v6/alpine:latest AS runner
 
 RUN apk add \
+        bash \
         hiredis \
         jansson \
         libcap \
