--- a/6.0/Dockerfile.arm32v6
+++ b/6.0/Dockerfile.arm32v6
@@ -88,7 +88,9 @@ RUN apk add \
         python3 \
         shadow \
         yaml \
-        zlib
+        zlib && \
+        find /etc/logrotate.d -type f -not -name suricata -delete
+
 
 COPY --from=builder /fakeroot /
 
