arm32v6: use git cli for cargo
Cargo is currently failing on Alpine ARM32, at least when running
under qemu while downloading packages. A work-around is to
instruct cargo to use the git cli to download the index.

--- a/6.0/Dockerfile.arm32v6
+++ b/6.0/Dockerfile.arm32v6
@@ -1,5 +1,7 @@
 FROM arm32v6/alpine:latest AS builder
 
+ENV CARGO_NET_GIT_FETCH_WITH_CLI=true
+RUN apk update
 RUN apk add \
         automake \
         autoconf \
