--- a/5.0/Dockerfile.arm32v6
+++ b/5.0/Dockerfile.arm32v6
@@ -1,5 +1,7 @@
 FROM arm32v6/alpine:latest AS builder
 
+ENV CARGO_NET_GIT_FETCH_WITH_CLI=true
+RUN apk update
 RUN apk add \
         automake \
         autoconf \
@@ -88,7 +90,9 @@ RUN apk add \
         python3 \
         shadow \
         yaml \
-        zlib
+        zlib && \
+        find /etc/logrotate.d -type f -not -name suricata -delete
+
 
 COPY --from=builder /fakeroot /
 
