--- a/master/Dockerfile.arm64v8
+++ b/master/Dockerfile.arm64v8
@@ -15,6 +15,7 @@ RUN apk add \
         libpcap-dev \
         libelf \
         libbpf-dev \
+        libnet-dev \
         libnetfilter_queue-dev \
         libnetfilter_log-dev \
         libtool \
@@ -78,6 +79,7 @@ RUN apk add \
         libpcap \
         libelf \
         libbpf \
+        libnet \
         libnetfilter_queue \
         libnetfilter_log \
         libmagic \
@@ -88,7 +90,8 @@ RUN apk add \
         python3 \
         shadow \
         yaml \
-        zlib
+        zlib && \
+        find /etc/logrotate.d -type f -not -name suricata -delete
 
 COPY --from=builder /fakeroot /
 
