amd64: add build with profiling enabled

--- a/5.0/Dockerfile.amd64
+++ b/5.0/Dockerfile.amd64
@@ -65,13 +65,16 @@ fi
 
 WORKDIR /src/suricata-${VERSION}
 
+ARG CONFIGURE_ARGS
+
 RUN ./configure \
         --prefix=/usr \
         --disable-shared \
         --disable-gccmarch-native \
         --enable-lua \
         --enable-nfqueue \
-        --enable-hiredis
+        --enable-hiredis \
+        ${CONFIGURE_ARGS}
 
 ARG CORES=2
 
