--- a/5.0/Dockerfile.arm64v8
+++ b/5.0/Dockerfile.arm64v8
@@ -47,6 +47,8 @@ fi
 
 WORKDIR /src/suricata-${VERSION}
 
+ARG CONFIGURE_ARGS
+
 RUN ./configure \
         --prefix=/usr \
         --sysconfdir=/etc \
@@ -55,7 +57,8 @@ RUN ./configure \
         --disable-gccmarch-native \
         --enable-ebpf \
         --enable-nfqueue \
-        --enable-hiredis
+        --enable-hiredis \
+	${CONFIGURE_ARGS}
 
 ARG CORES=2
 
