--- a/master/Dockerfile.arm32v6
+++ b/master/Dockerfile.arm32v6
@@ -50,6 +50,8 @@ fi
 
 WORKDIR /src/suricata-${VERSION}
 
+ARG CONFIGURE_ARGS
+
 RUN ./configure \
         --prefix=/usr \
         --sysconfdir=/etc \
@@ -58,7 +60,8 @@ RUN ./configure \
         --disable-gccmarch-native \
         --enable-ebpf \
         --enable-nfqueue \
-        --enable-hiredis
+        --enable-hiredis \
+	${CONFIGURE_ARGS}
 
 ARG CORES=2
 
