--- a/master/Dockerfile.arm64v8
+++ b/master/Dockerfile.arm64v8
@@ -48,6 +48,8 @@ fi
 
 WORKDIR /src/suricata-${VERSION}
 
+ARG CONFIGURE_ARGS
+
 RUN ./configure \
         --prefix=/usr \
         --sysconfdir=/etc \
@@ -56,7 +58,8 @@ RUN ./configure \
         --disable-gccmarch-native \
         --enable-ebpf \
         --enable-nfqueue \
-        --enable-hiredis
+        --enable-hiredis \
+	${CONFIGURE_ARGS}
 
 ARG CORES=2
 
