github-ci: push profiling build on nightlies

--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -24,6 +24,7 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_TOKEN }}
       - run: docker push jasonish/suricata:master-${{ matrix.arch }}
+      - run: docker push jasonish/suricata:master-${{ matrix.arch }}-profiling
 
   push-master:
     runs-on: ubuntu-20.04
