--- a/master/Dockerfile.amd64
+++ b/master/Dockerfile.amd64
@@ -9,6 +9,11 @@ RUN dnf -y install \
         autoconf \
         automake \
         cargo \
+        clang \
+        llvm \
+        elfutils-libelf-devel \
+        libbpf-devel \
+        glibc-devel \
         diffutils \
         file \
         file-devel \
@@ -74,6 +79,9 @@ RUN ./configure \
         --enable-lua \
         --enable-nfqueue \
         --enable-hiredis \
+        --enable-ebpf \
+        --enable-ebpf-build \
+        --with-clang=/usr/bin/clang \
         ${CONFIGURE_ARGS}
 
 ARG CORES=2
@@ -99,6 +107,7 @@ RUN \
         iproute \
         jansson \
         lua-libs \
+        libbpf \
         libyaml \
         libnfnetlink \
         libnetfilter_queue \
@@ -128,6 +137,8 @@ COPY --from=builder /fakeroot /
 # Create the directories that didn't get coped from the previous stage.
 RUN mkdir -p /var/log/suricata /var/run/suricata /var/lib/suricata
 
+RUN mkdir -p /usr/libexec/suricata/ebpf/
+
 COPY /update.yaml /etc/suricata/update.yaml
 COPY /suricata.logrotate /etc/logrotate.d/suricata
 
@@ -147,6 +158,7 @@ RUN useradd --system --create-home suricata && \
 VOLUME /var/log/suricata
 VOLUME /var/lib/suricata
 VOLUME /etc/suricata
+VOLUME /usr/libexec/suricata/ebpf/
 
 COPY /docker-entrypoint.sh /
 ENTRYPOINT ["/docker-entrypoint.sh"]
