--- a/6.0/Dockerfile.arm64v8
+++ b/6.0/Dockerfile.arm64v8
@@ -15,6 +15,7 @@ RUN apk add \
         libpcap-dev \
         libelf \
         libbpf-dev \
+        libmaxminddb-dev \
         libnet-dev \
         libnetfilter_queue-dev \
         libnetfilter_log-dev \
@@ -59,6 +60,7 @@ RUN ./configure \
         --enable-ebpf \
         --enable-nfqueue \
         --enable-hiredis \
+        --enable-geoip \
 	${CONFIGURE_ARGS}
 
 ARG CORES=2
@@ -82,6 +84,7 @@ RUN apk add \
         libpcap \
         libelf \
         libbpf \
+        libmaxminddb \
         libnet \
         libnetfilter_queue \
         libnetfilter_log \
