--- a/master/Dockerfile.arm32v6
+++ b/master/Dockerfile.arm32v6
@@ -17,6 +17,7 @@ RUN apk add \
         libpcap-dev \
         libelf \
         libbpf-dev \
+        libmaxminddb-dev \
         libnet-dev \
         libnetfilter_queue-dev \
         libnetfilter_log-dev \
@@ -61,6 +62,7 @@ RUN ./configure \
         --enable-ebpf \
         --enable-nfqueue \
         --enable-hiredis \
+        --enable-geoip \
 	${CONFIGURE_ARGS}
 
 ARG CORES=2
@@ -84,6 +86,7 @@ RUN apk add \
         libpcap \
         libelf \
         libbpf \
+        libmaxminddb \
         libnet \
         libnetfilter_queue \
         libnetfilter_log \
