github-ci: use CARGO_NET_GIT_FETCH_WITH_CLI
There are spurious memory issues during nightly CI runs which may be
solved by this setting.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,6 +6,9 @@ on:
       - "README.md"
   pull_request:
 
+env:
+  CARGO_NET_GIT_FETCH_WITH_CLI: "true"
+
 jobs:
 
   # Build versioned releases. We don't push these on every build.
